<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="316dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/tv_item_photo"
            android:layout_width="326dp"
            android:layout_height="210dp"
            android:layout_marginTop="8dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/detail_row_photo" />

        <TextView
            android:id="@+id/tv_uploadby"
            android:layout_width="117dp"
            android:layout_height="24dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="268dp"
            android:layout_toEndOf="@id/tv_item_photo"
            android:text="@string/upload_by"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_photo"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_photo" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="@string/name"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_uploadby"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/tv_uploadby"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_uploadby"
            card_view:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/Upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/date_upload"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.761"
            card_view:layout_constraintStart_toEndOf="@+id/tv_uploadby"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_photo" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="@+id/Upload"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/Upload"
            card_view:layout_constraintTop_toBottomOf="@+id/Upload" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>