<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Activity.Main.StoryActivity">

    <ImageView
        android:id="@+id/iv_Story_Pref"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="5dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_Takepciture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_holder"
        android:contentDescription="@string/newstory_photo" />

    <Button
        android:id="@+id/btn_Takepciture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:text="@string/take_picture"
        android:textColor="@color/white"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@+id/descriptionEditTextLayout"
        app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
        app:layout_constraintStart_toStartOf="@+id/iv_Story_Pref"
        app:layout_constraintTop_toBottomOf="@+id/iv_Story_Pref" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gallery"
        android:textColor="@color/white"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@+id/btn_Takepciture"
        app:layout_constraintEnd_toEndOf="@+id/iv_Story_Pref"
        app:layout_constraintStart_toEndOf="@+id/btn_Takepciture"
        app:layout_constraintTop_toTopOf="@+id/btn_Takepciture"  />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionEditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/newstory_description"
        app:layout_constraintEnd_toEndOf="@id/iv_Story_Pref"
        app:layout_constraintStart_toStartOf="@+id/iv_Story_Pref"
        app:layout_constraintTop_toBottomOf="@id/btn_Takepciture">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:inputType="text"
            android:maxLines="10"
            app:layout_constraintStart_toStartOf="@+id/btn_Takepciture"
            app:layout_constraintTop_toBottomOf="@id/btn_Takepciture" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_add"
        android:layout_width="190dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/post"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/descriptionEditTextLayout"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/descriptionEditTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/locationSwitch"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Switch
        android:id="@+id/locationSwitch"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditTextLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>